# user-serialize-c

./: .gitignore  CMakeLists.txt  README.md  deps.toml
.github/workflows/: build_linux.yml  build_macos.yml
docs/: index.adoc
src/: .clang-format  CMakeLists.txt
src/include/guise-serialize/: client_in.h  client_out.h  commands.h  debug.h  parse_text.h  query_client_in.h  query_client_out.h  query_server_in.h  query_server_out.h  serialize.h  server_in.h  server_out.h  types.h
src/include/user-serialize/: client_in.h  client_out.h  commands.h  debug.h  serialize.h  server_in.h  server_out.h  types.h
src/lib/: CMakeLists.txt  client_in.c  client_out.c  debug.c  parse_text.c  query_client_in.c  query_client_out.c  query_server_in.c  query_server_out.c  serialize.c  server_in.c  server_out.c
